Optimize mobile layout: increase logo size and padding-top to prevent content overlap

--- a/app/biblioteca/biblioteca.module.css
+++ b/app/biblioteca/biblioteca.module.css
@@ -386,7 +386,7 @@
 
 @media (max-width: 767.98px) {
     .logoNavbar {
-        height: 50px;
+        height: 100px;
     }
 
     .navbarToggler {
@@ -426,7 +426,7 @@
     }
 
     .pageContainer {
-        padding-top: 70px;
+        padding-top: 150px;
     }
 
     .mainContainer {
